chore: prepare 0.3.2-rc.1
